fixed a issue where navigation bar shifts due to margin collapse.

--- a/styles/resets.css
+++ b/styles/resets.css
@@ -48,6 +48,7 @@ body {
   position: fixed;
   z-index: 99;
   width: 100%;
+  top: 0;
 }
 
 .navigation__brand {
